--- a/assets/css/manga.scss
+++ b/assets/css/manga.scss
@@ -145,6 +145,7 @@
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
+        cursor: pointer;
       }
     }
     .delete-favorite {
@@ -156,6 +157,7 @@
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
+        cursor: pointer;
       }
     }
   }
