--- a/assets/css/miscellaneous.scss
+++ b/assets/css/miscellaneous.scss
@@ -90,6 +90,29 @@ h3.chapter-scan-title {
   }
 }
 
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  height: fit-content;
+  padding: 10px 20px;
+  border-radius: 8px;
+  background-color: $foreground;
+
+  .page-link {
+    width: fit-content;
+    font-family: "Tilt Neon", sans-serif;
+    font-weight: 400;
+    color: $font-color;
+    font-size: calc(14px + .5vw);
+    text-align: center;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  span.page-link {
+    color: $blue-elem;
+  }
+}
 
 .ctn {
   display: flex;
