--- a/templates/chapter.gohtml
+++ b/templates/chapter.gohtml
@@ -5,10 +5,11 @@
 {{define "cssFile"}}miscellaneous{{end}}
 
 {{define "page"}}
-        {{if .IsOk}}
-            <div class="chapter-scan-list">
-            <h2 class="chapter-scan-manga-title">{{.Manga}}</h2>
+    {{if .IsOk}}
+        <div class="chapter-scan-list">
+            <a href="/manga/{{.MangaId}}"><h2 class="chapter-scan-manga-title">{{.Manga}}</h2></a>
             <h3 class="chapter-scan-title">Chapter {{.ChapterNb}}</h3>
+            <h3 class="chapter-scan-title">Scanlation group: {{.ScanlationGroup}}</h3>
             {{$hash := .Scan.Hash}}
             {{$id := .Id}}
             {{$quality := .Quality}}
@@ -22,17 +23,30 @@
                     <img class="chapter-scan" src="/scan/{{$id}}/{{$quality}}/{{$hash}}/{{.}}" alt="{{$alt}}">
                 {{end}}
             {{end}}
-            </div>
-        {{else}}
-            <div class="ctn">
-                <div class="error-txt">
-                    <div class="text-container">
-                        <div class="text-wrapper">ERROR</div>
-                        <div class="div">404</div>
-                    </div>
+        </div>
+        <div class="pagination">
+            {{if .IsPrevious}}
+                <a href="{{.Previous}}" class="page-link">Previous</a>
+            {{else}}
+                <span class="page-link">Previous</span>
+            {{end}}
+            <a href="/manga/{{.MangaId}}" class="page-link">Return to Manga</a>
+            {{if .IsNext}}
+                <a href="{{.Next}}" class="page-link">Next</a>
+            {{else}}
+                <span class="page-link">Next</span>
+            {{end}}
+        </div>
+    {{else}}
+        <div class="ctn">
+            <div class="error-txt">
+                <div class="text-container">
+                    <div class="text-wrapper">ERROR</div>
+                    <div class="div">404</div>
                 </div>
-                <div class="error-img" style="background-image: url('http://localhost:8080/static/img/error-img.png')"></div>
-                <div class="error-info"><p class="p">We didn’t find the scans you were looking for...</p></div>
             </div>
-        {{end}}
+            <div class="error-img" style="background-image: url('http://localhost:8080/static/img/error-img.png')"></div>
+            <div class="error-info"><p class="p">We didn’t find the scans you were looking for...</p></div>
+        </div>
+    {{end}}
 {{end}}
