Added navigation bar before chapter scans.

--- a/assets/css/miscellaneous.css
+++ b/assets/css/miscellaneous.css
@@ -378,6 +378,29 @@ body {
   background-position: 50% 50%;
 }
 
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  height: fit-content;
+  padding: 10px 20px;
+  border-radius: 8px;
+  background-color: #393E46;
+}
+.pagination .page-link {
+  width: fit-content;
+  font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
+  color: #EEEEEE;
+  font-size: calc(14px + 0.5vw);
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+}
+.pagination span.page-link {
+  color: #00ADB5;
+}
+
 h2.chapter-scan-manga-title,
 h3.chapter-scan-title {
   width: 100%;
@@ -405,6 +428,9 @@ h3.chapter-scan-title {
 }
 .chapter-scan-list img.chapter-scan {
   object-fit: contain;
+}
+.chapter-scan-list .pagination {
+  width: calc(100% - 40px);
 }
 
 @media screen and (max-width: 1080px) {
@@ -460,29 +486,6 @@ h3.chapter-scan-title {
 }
 .tags .tag:hover {
   background-color: #00ADB5;
-}
-
-.pagination {
-  display: flex;
-  justify-content: space-between;
-  width: 50%;
-  height: fit-content;
-  padding: 10px 20px;
-  border-radius: 8px;
-  background-color: #393E46;
-}
-.pagination .page-link {
-  width: fit-content;
-  font-family: "Tilt Neon", sans-serif;
-  font-weight: 400;
-  color: #EEEEEE;
-  font-size: calc(14px + 0.5vw);
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-.pagination span.page-link {
-  color: #00ADB5;
 }
 
 .ctn {
