--- a/templates/chapter.gohtml
+++ b/templates/chapter.gohtml
@@ -10,6 +10,19 @@
             <a href="/manga/{{.MangaId}}"><h2 class="chapter-scan-manga-title">{{.Manga}}</h2></a>
             <h3 class="chapter-scan-title">Chapter {{.ChapterNb}}</h3>
             <h3 class="chapter-scan-title">Scanlation group: {{.ScanlationGroup}}</h3>
+            <div class="pagination">
+                {{if .IsPrevious}}
+                    <a href="{{.Previous}}" class="page-link">Previous</a>
+                {{else}}
+                    <span class="page-link">Previous</span>
+                {{end}}
+                <a href="/manga/{{.MangaId}}" class="page-link">Return to Manga</a>
+                {{if .IsNext}}
+                    <a href="{{.Next}}" class="page-link">Next</a>
+                {{else}}
+                    <span class="page-link">Next</span>
+                {{end}}
+            </div>
             {{$hash := .Scan.Hash}}
             {{$id := .Id}}
             {{$quality := .Quality}}
