--- a/assets/css/manga.scss
+++ b/assets/css/manga.scss
@@ -348,7 +348,7 @@
       &:nth-child(even) {
         background-color: $bright-foreground;
       }
-      p.chapter-title {
+      a.chapter-title {
         flex: 1 0 auto;
         width: 12vw;
         font-family: "Tilt Neon", sans-serif;
@@ -357,6 +357,12 @@
         font-size: 20px;
         letter-spacing: 0;
         line-height: normal;
+        transition: color 100ms ease-in 50ms;
+        cursor: pointer;
+
+        &:hover {
+          color: $blue-elem;
+        }
       }
       .source {
         flex: 1 1 auto;
@@ -381,6 +387,7 @@
       a.chapter-link {
         padding: 0;
         margin: 0;
+        cursor: pointer;
 
         img.icon-menu-book {
           width: 44px;
@@ -411,8 +418,14 @@
       text-align: center;
       letter-spacing: 0;
       line-height: normal;
+      transition: color 100ms ease-in 50ms;
+
+      &:hover {
+        color: $blue-elem;
+      }
   }
   span.page-link {
     color: $blue-elem;
+    transition: none;
   }
 }
