--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -569,9 +569,19 @@ a {
     text-align: center;
     letter-spacing: 0;
     line-height: normal;
+    transition: color 100ms ease-in 50ms;
+
+    &:hover {
+      color: $blue-elem;
+    }
   }
   span.page-link {
-    color: $blue-elem;
+    color: $red;
+    transition: none;
+
+    &:hover {
+      color: $red;
+    }
   }
 }
 
