--- a/templates/category.gohtml
+++ b/templates/category.gohtml
@@ -43,7 +43,7 @@
                             {{end}}
                         </div>
                         <div class="hover-buttons">
-                            <a href="/chapter/{{.Id}}/1/{{if .LastChapterRead}}{{.LastChapterRead}}{{else}}{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+                            <a href="/chapter/{{.Id}}/{{if .LastChapterRead}}0/{{.LastChapterRead}}{{else}}0/{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
                             <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
                         </div>
                     </div>
