--- a/templates/principal.gohtml
+++ b/templates/principal.gohtml
@@ -22,7 +22,7 @@
       {{end}}
     </div>
     <div class="banner-buttons">
-      <a href="/chapter/{{.Banner.Id}}/1/{{.Banner.FirstChapterId}}"><div class="read-btn"><div class="banner-btn-text">Read Now</div></div></a>
+      <a href="/chapter/{{.Banner.Id}}/0/{{.Banner.FirstChapterId}}"><div class="read-btn"><div class="banner-btn-text">Read Now</div></div></a>
       <a href="/manga/{{.Banner.Id}}?order=desc&pag=1"><div class="info-btn"><div class="banner-btn-text">View Info</div></div></a>
     </div>
   </div>
@@ -52,7 +52,7 @@
             {{end}}
           </div>
           <div class="hover-buttons">
-            <a href="/chapter/{{.Id}}/1/{{if .LastChapterRead}}{{.LastChapterRead}}{{else}}{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/chapter/{{.Id}}/{{if .LastChapterRead}}0/{{.LastChapterRead}}{{else}}0/{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
             <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
@@ -86,7 +86,7 @@
             {{end}}
           </div>
           <div class="hover-buttons">
-            <a href="/chapter/{{.Id}}/1/{{if .LastChapterRead}}{{.LastChapterRead}}{{else}}{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
+            <a href="/chapter/{{.Id}}/{{if .LastChapterRead}}0/{{.LastChapterRead}}{{else}}0/{{.FirstChapterId}}{{end}}" class="hover-btn-read"><span class="hover-btn-text">Read Now</span></a>
             <a href="/manga/{{.Id}}?order=desc&pag=1" class="hover-btn-info"><span class="hover-btn-text">View Info</span></a>
           </div>
         </div>
