--- a/templates/base.gohtml
+++ b/templates/base.gohtml
@@ -40,14 +40,13 @@
         <a href="/" class="logo-ctn">
             <img class="logo" src="{{template "staticPath" .}}/img/header-logo-1.png" alt="logo" />
         </a>
-{{/*        <div class="footer-nav">*/}}
-{{/*            <div class="header-nav-text">ABOUT</div>*/}}
-{{/*            <div class="header-nav-text">TERMS AND CONDITIONS</div>*/}}
-{{/*            <div class="header-nav-text">SITEMAP</div>*/}}
-{{/*        </div>*/}}
+        <div class="footer-nav">
+            <a href="/about" class="category-link">ABOUT</a>
+            <a href="/about#rights" class="category-link">TERMS AND CONDITIONS</a>
+            <a href="https://www.figma.com/file/TJQIg2ezYVQnoeZpVtUtLX/Untitled?type=design&node-id=0%3A1&mode=design&t=FwvKUwbyOjXwMVPQ-1" class="category-link">SITEMAP</a>
+        </div>
         <p class="credits">
-            MangaThorg.com is a Free website based on <a href="https://api.mangadex.org" class="credits-link">MangaDex API</a>.<br />No manga content is stored on our server, but
-            comes from <a href="https://mangadex.org" class="credits-link">MangaDex</a>.
+            MangaThorg.com is a Free website based on <a href="https://api.mangadex.org" class="credits-link">MangaDex API</a>.<br />No manga content is stored on our server, but all of it comes from <a href="https://mangadex.org" class="credits-link">MangaDex</a>.
         </p>
         <div class="copyright">© MangaThorg.adebarbarin.com</div>
     </div>
